# fashion_model_generation_ai

./: .gitignore  API_SETUP_GUIDE.md  AUTO_VIDEO_GENERATION_FEATURE.md  AUTO_VIDEO_GENERATION_SIMPLIFIED.md  BUGFIX_REPORT.md  CHANGELOG.md  CHAT_IMAGE_EDIT_IMPLEMENTATION.md  CHAT_REFINEMENT_DEBUG_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  DISTRIBUTION_README.md  FASHN_VIRTUAL_TRYON_FINAL.md  FINAL_ERROR_CHECK_COMPLETE.md  FINAL_SUMMARY.md  GEMINI_IMAGEN_MIGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE1_IMPLEMENTATION_GUIDE.md  PHASE2_IMPLEMENTATION_GUIDE.md  PHASE3_IMPLEMENTATION_GUIDE.md  PHASE4_IMPLEMENTATION_GUIDE.md  PROGRESS_SYSTEM.md  QUICKSTART.md  QUICKSTART_JP.md  QUICK_TEST_REFERENCE_PERSON.md  README.md  REFERENCE_PERSON_500_ERROR_FIX.md  REFERENCE_PERSON_ADVANCED_FIX.md  REFERENCE_PERSON_BUGFIX.md  REFERENCE_PERSON_FEATURE.md  REFERENCE_PERSON_FINAL_SOLUTION.md  REFERENCE_PERSON_WORKING_SOLUTION.md  STABILITY_INPAINTING_IMPLEMENTATION.md  SYSTEM_FLOW_REFERENCE_PERSON.md  TECHNICAL_LIMITATION_AND_SOLUTION.md  UI_SIMPLIFICATION_COMPLETE.md  UPGRADE_GUIDE.md  USAGE.md  VERSION_1.1_RELEASE_NOTES.md  VIRTUAL_TRYON_GUIDE.md  (+10 more)
.claude/: settings.local.json
app/: __init__.py  main.py
scripts/: pack_win.ps1
tests/: __init__.py  test_adapters.py  test_fidelity.py  test_models.py
verification/: FINAL_ERROR_CHECK.md  README.md  STABILITY_VIDEO_API_INQUIRY.md  list_models.py  test_all_imports.py  test_animated_video.py  test_fashn_image_to_video.py  test_fashn_virtual_tryon.py  test_gemini_flash_image.py  test_gemini_imagen_adapter.py  test_progress.py  (+8 more)
(+60 files in other folders)
